Fixing overflow

--- a/_sass/_kinoshita.scss
+++ b/_sass/_kinoshita.scss
@@ -51,6 +51,7 @@ a {
 #content {
   padding: 0 1rem;
   margin-left: 250px;
+  overflow: auto;
 }
 
 .full.height .toc {
